--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -408,10 +408,10 @@
     	<string name="X_files_deleted">% файл{0:ов|1:|2-4:а|_2-4:а|__:ов} удалено.</string>
     	<string name="X_files_copied">% файл{0:ов|1:|2-4:а|_2-4:а|__:ов} скопировано.</string>
     	<string name="X_files_moved">% файл{0:ов|1:|2-4:а|_2-4:а|__:ов} перемещено.</string>
-    	<string name="X_items">% елемент{0:ов|1:|2-4:а|_2-4:а|__:ов}</string>
-    	<string name="Deleting_X_files">Удаление % файл{0:ов|1:|2-4:а|_2-4:а|__:ов}</string>
-    	<string name="Copying_X_files">Копирование % файл{0:ов|1:|2-4:а|_2-4:а|__:ов}</string>
-    	<string name="Moving_X_files">Перемещение % файл{0:ов|1:|2-4:а|_2-4:а|__:ов}</string>
+    	<string name="X_items">% елемент{0:ов|1:а|2-4:ов|_2-4:ов|__:ов}</string>
+    	<string name="Deleting_X_files">Удаление % файл{0:ов|1:а|2-4:ов|_2-4:ов|__:ов}</string>
+    	<string name="Copying_X_files">Копирование % файл{0:ов|1:а|2-4:ов|_2-4:ов|__:ов}</string>
+    	<string name="Moving_X_files">Перемещение % файл{0:ов|1:а|2-4:ов|_2-4:ов|__:ов}</string>
     	<string name="Indexing_scheduled_at_X_every_Y">Индексация запланирована на %x каждый %y д{1:ень|2-4:ня|_2-4:ня|__:ней}</string>
     	<!-- Explanation of above
     	
