--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -412,7 +412,7 @@
     	<string name="Deleting_X_files">Удаление % файл{0:ов|1:а|2-4:ов|_2-4:ов|__:ов}</string>
     	<string name="Copying_X_files">Копирование % файл{0:ов|1:а|2-4:ов|_2-4:ов|__:ов}</string>
     	<string name="Moving_X_files">Перемещение % файл{0:ов|1:а|2-4:ов|_2-4:ов|__:ов}</string>
-    	<string name="Indexing_scheduled_at_X_every_Y">Индексация запланирована на %x каждый %y д{1:ень|2-4:ня|_2-4:ня|__:ней}</string>
+    	<string name="Indexing_scheduled_at_X_every_Y">Индексация запланирована на %x каждые(й) %y д{1:ень|2-4:ня|_2-4:ней|__:ней}</string>
     	<!-- Explanation of above
     	
     		 	In english things are simple because we have 1 file and multiple files.
