--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -745,30 +745,30 @@
     	<string name="X_folders">% пап{0:ок|1:ка|2-4:ки|_2-4:ок|__:ок}</string>
     	<string name="X_files">% файл{0:ов|1:|2-4:а|_2-4:ов|__:ов}</string>
     	
-    	<string name="Show_status_summary">Show information about directory content and used space in the explorer window</string>
-    	<string name="Show_status">Show status</string>
-    	<string name="Mount_rw">Mount r/w</string>
-    	<string name="System_mounted_as_read_write">System mounted as read/write</string>
-    	<string name="System_mounted_as_read_only">System mounted as read only</string>
+    	<string name="Show_status_summary">Показать информацию о файлах в директории и использованном пространстве в окне проводника</string>
+    	<string name="Show_status">Показывать статус</string>
+    	<string name="Mount_rw">Монтировать в r/w</string>
+    	<string name="System_mounted_as_read_write">Система смонтированна в чтение/запись</string>
+    	<string name="System_mounted_as_read_only">Система смонтированна только в чтение</string>
     	
     <!--  v 1.3.9 -->
-    	<string name="Device_labels">Device labels</string>
-    	<string name="Device_labels_summary">Show human readable device labels instead of real directory names, ex. \&quot;SD Card\&quot; instead of \&quot;sdcard0\&quot;</string>
-    	<string name="Swap_device_labels">Swap device labels</string>
-    	<string name="Swap_device_labels_summary">Swap Internal Memory with SD Card labels in case of incorrect detection.</string>
-    	<string name="Panels">Panels</string>
-    	<string name="Devices">Devices</string>
-    	<string name="Bug_report_notice">Before reporting a bug please do the following:\n\n<b>1. Check whether the issue exists in other file manager apps.\n2. Read the FAQ.</b>\n\nDid you complete the steps above?</string>
-    	<string name="Unable_to_move_the_file">Unable to move the file %</string>
+    	<string name="Device_labels">Метки устройства</string>
+    	<string name="Device_labels_summary">Показать нормальные имена устройств и дисков, вместо реальных имен, например \&quot;SD Карта\&quot; instead of \&quot;sdcard0\&quot;</string>
+    	<string name="Swap_device_labels">Смена меток устройств</string>
+    	<string name="Swap_device_labels_summary">Поменять местами встроенную память с SD картой, в случае неправильного обнаружения</string>
+    	<string name="Panels">Панели</string>
+    	<string name="Devices">Устройства</string>
+    	<string name="Bug_report_notice">Перед сообщением об ошибке, выполните следующее:\n\n<b>1. Существует ли данная проблема в другом файловом менеджере.\n2. Прочтите FAQ.</b>\n\nВы выполнили эти действия?</string>
+    	<string name="Unable_to_move_the_file">Не удалось переместить файл %</string>
     
     <!-- v 1.4.0 -->
-    	<string name="Compression_ratio">Compression ratio</string>
-    	<string name="Compression_method">Compression method</string>
-    	<string name="Comment">Comment</string>
-    	<string name="Standard">Standard</string>
-    	<string name="No_compression">No compression</string>
-    	<string name="A_while_ago">A while ago</string>
-    	<string name="X_hours_Y_minutes_ago">%x hour{1:|__:s} %y minute{1:|__:s} ago</string>
+    	<string name="Compression_ratio">Коэффициент сжатия</string>
+    	<string name="Compression_method">Метод сжатия</string>
+    	<string name="Comment">Комментарий</string>
+    	<string name="Standard">Стандартный</string>
+    	<string name="No_compression">Без сжатия</string>
+    	<string name="A_while_ago">Недавно</string>
+    	<string name="X_hours_Y_minutes_ago">%x час{0:ов|1:|2-4:а|_2-4:ов|__:ов} %y мин{0:|1:ута|2-4:уты|_2-4:уты|__:ут} ago</string>
     	<!-- Already exists, just changed the content -->
     	<string name="Expiration_message">Thank you for using Solid Explorer, your trial is over now. To continue using this app, buy me a virtual beer by purchasing the unlocker from Google Play. Do it only when you are fully satisfied with the app.</string>
     	<string name="Purchased_message">Thank you for purchasing the full version of Solid Explorer. I hope you will enjoy it.</string>
