--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -86,7 +86,7 @@
     <string name="Open_in_bg">Открыть в фоне</string>
     <string name="Send">Отправить</string>
     <string name="Bookmark">Закладка</string>
-    <string name="Rename">Переименоватьe</string>
+    <string name="Rename">Переименовать</string>
     <string name="Extract">Извлечь</string>
     <string name="Extract_to">Извлечь в</string>
     <string name="Archive">Архивировать</string>
